--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenLocal()
+        mavenCentral()
         jcenter()
     }
     dependencies {
@@ -19,15 +20,19 @@ targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
+    mavenCentral()
     jcenter()
 }
 
 dependencies {
     implementation "net.serenity-bdd:serenity-rest-assured:${property('serenity.version')}"
-    implementation "net.serenity-bdd:serenity-core:${property('serenity.version')}"
-    implementation "net.serenity-bdd:serenity-cucumber:${property('cucumber.version')}"
     implementation "org.json:json:20190722"
-    implementation "org.slf4j:slf4j-simple:1.7.30"
+
+    testImplementation "net.serenity-bdd:serenity-rest-assured:${property('serenity.version')}"
+    testImplementation "net.serenity-bdd:serenity-core:${property('serenity.version')}"
+    testImplementation "net.serenity-bdd:serenity-cucumber4:${property('cucumber.version')}"
+    testImplementation "org.json:json:20190722"
+    testImplementation "org.slf4j:slf4j-simple:1.7.30"
 }
 
 // Allow build to continue on test failure
